# edge

./: ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Dockerfile  Dockerfile.oracle-pnl-hotfix  README.md  docker-compose-logs.txt  docker-compose.yml  docker-compose.yml.bak-oracle-dashboard-db-contract-20260720-225647  docker-compose.yml.bak-telemetry-20260720T174600Z  docker-entrypoint.sh  pyproject.toml  requirements.txt
config/: config.example.yaml  config.yaml  config.yaml.bak-oracle-dashboard-db-contract-20260720-225647  strategies.example.yaml  strategies.yaml  strategies.yaml.bak-20260721-165123
data/: audit.jsonl  compliance_state.json  control.json  control.json.bak-20260721-165559  control.json.bak-consensus  last_weekly_report  risk_state.json  rl_convergence.jsonl  rl_policy.npz  rl_policy.npz.bak  rl_policy.state.npz  shadow_virtual_books.json  status.json  strategies.yaml  virtual_books.json  virtual_books_migration.json
docs/: TRUENAS.md
scripts/: convergence_report.py
tests/: conftest.py  test_advisory.py  test_aggregator.py  test_allocator_regime.py  test_audit_ledger_contract.py  test_backtest_live_settings.py  test_broker.py  test_capital.py  test_capital_broker.py  test_capital_candle_timestamps.py  test_capital_protection.py  test_config_safety.py  test_consensus_backtest.py  test_consensus_lineage.py  test_consensus_vote_snapshots.py  test_convergence_monitor.py  test_costs.py  test_crash_protection.py  test_dashboard_consensus_lineage.py  test_dashboard_control_regressions.py  test_dashboard_db_path_contract.py  test_dashboard_resets.py  test_dashboard_shadow_open_pnl.py  test_ema921_momentum.py  test_ema_strategies.py  test_exits_breakeven.py  test_features.py  test_feed_rate_limits.py  (+35 more)
(+103 files in other folders)
